Add Selenium tests for Calculator
Change-Id: I8943805f0f335f6d9b45b70acf587b05e1e6f7ed
Signed-off-by: Adrian Goerler <adrian.goerler@sap.com>

--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -12,9 +12,11 @@ OM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
 	<properties>
 		<sap.cloud.ui5.version>1.10.3</sap.cloud.ui5.version>
+		<selenium.version>2.35.0</selenium.version>
 	</properties>
 
 	<modules>
 		<module>../web</module>
+		<module>../selenium</module>
 	</modules>
 </project>
